examples/negative/35_rule_violation.hema
# BREAKS: a rule pack's static rule evaluating false against a matched
#   entity (RulePacks family: `pack.rule` provenance rendered).
# EXPECT: E0601
# (Flipped from EXPECT-TODO by hand: the WO-28 engine remainder landed
# static rule evaluation -- `regolith-lower/src/rules.rs::
# evaluate_static_rules` runs every ATTACHED rule; an unquantified
# `demand: false` evaluates once per consuming decl and violates.)
process sheet_metal:
    dfm:
        rule min_web:
            demand: false

part p:
    material: AISI_304
    stage cut: process=sheet_metal
